# Django-Assginment

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
day1/: urls.py  views.py
day2/: admin.py  forms.py  models.py  urls.py  views.py
day2/migrations/: 0001_initial.py  0002_todo_user.py  0003_comment.py
day5/: apps.py  urls.py  views.py
templates/: user_list.html
templates/day1/: user_info.html  user_list.html
templates/day2/: base.html  pagination.html  todo_create.html  todo_info.html  todo_list.html  todo_update.html
users/: views.py
